styles.css
* {
	margin: 0;
	padding: 0;
}

html, body {
	background-color: black;
	font-family: sans-serif;
	height: 100%;
	max-height: 100%;
	-webkit-text-stroke: 0.5px black;
}

.background-container {
	background-attachment: fixed;
	background-color: black;
	background-image: url('assets/cod_background.jpeg');
	background-position: center center;
	background-repeat: no-repeat;
	background-size: cover;
	height: 100%;
	max-height: 100%;
	position: fixed;
	text-align: center;
	width: 100%;
	-moz-background-size: cover;
	-o-background-size: cover;
	-webkit-background-size: cover;
}

h2 {
	color: white;
	text-decoration: none;
}

h4 {	
	color: dodgerblue;
}

p, span {
	color: coral;
}

u {
	text-decoration: none;
}

@media only screen and (min-width: 1281px) {
	.middle {
		width: 40%;
		margin: 0 auto;
	}
}

.top {
	color: white;
	display: inline-block;
	font-size: 1.7em;
	font-weight: 600;
	padding-top: 3%;
	text-align: center;
}

.header {
	color: white;
	font-size: 1em;
	font-weight: 600;
	margin-left: auto;
	margin-right: auto;
	padding-bottom: 3%;
	padding-top: 3%;
	text-align: center;
	width: 90%;
}

.button1 {
	background: steelblue;
	border: 0;
	border-radius: 3px;
	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
	color: black;
	cursor: pointer;
	display: block;
	font-size: .75em;
	font-weight: 600;
	height: 38px;
	letter-spacing: 1px;
	line-height: 38px;
	margin-left: auto;
	margin-right: auto;
	overflow: hidden;
	text-transform: uppercase;
	transition: all 0.3s ease;
	width: 150px;
	-moz-appearance: none;
	-webkit-appearance: none;
}

.button1:hover {	
	opacity: 0.8;
}

.copyright {
	color: white;
	font-size: 0.7em;
	margin-top: -3%;
	padding-top: 5%;
}

.copyrightLine2 {
	color: white;
	font-size: 0.7em;
	margin-top: 0;
	padding-top: 0;
}
        
.attributionLink {
	color: inherit;
	text-decoration: none;
}

.outputs {
	background: initial;
	background-color: rgb(47,79,79, 0.95);
	border-radius: 20px;
	line-height: 2;
	margin-left: auto;
	margin-right: auto;
	opacity: 0;
	overflow: auto;
    max-height: 65vh !important;
	scroll-behavior: smooth;
	text-align: center;
	transition: all 1s ease-in-out;
	width: 90%;
	-moz-transition: all 1s ease-in-out;
	-ms-transition: all 1s ease-in-out;
	-o-transition: all 1s ease-in-out;
	-webkit-transition: all 1s ease-in-out;
}

@media only screen and (min-width: 1281px) {
	.outputs {
		background: initial;
		background-color: rgb(47,79,79, 0.95);
		border-radius: 20px;
		line-height: 2;
		margin-left: auto;
		margin-right: auto;
		opacity: 0;
		overflow: auto;
    	max-height: 60vh !important;
		scroll-behavior: smooth;
		text-align: center;
		transition: all 1s ease-in-out;
		width: 90%;
		-moz-transition: all 1s ease-in-out;
		-ms-transition: all 1s ease-in-out;
		-o-transition: all 1s ease-in-out;
		-webkit-transition: all 1s ease-in-out;
	}
}

.outputs > :last-child {
	margin-bottom: 3em;
}

.gradientback {
	bottom: 35px;
	height: 60px;
	position: absolute;
	width: 100%;
	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%);
	background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
	background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%);
	background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,1)));
	background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%);
}

.footer {
	background-color: black;
	bottom: 0;
	color: white;
	left: 0;
	position: fixed;
	text-align: center;
	width: 100%;
}

